<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 AmperificSuperKANG Project

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     version 3 as published by the Free Software Foundation.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->

<resources>

    <string name="app_name">ASKP Control</string>
    <string name="unavailable">Unavailable</string>
    <string name="noroot">No root!</string>
    <string name="norootaccess">No root access!</string>
    <string name="nobusybox">No busybox!</string>
    <string name="valuesapplied">Apply Successfully</string>
    <string name="action_setonboot">Set on boot</string>
    <string name="action_settings">Settings</string>
    <string name="newkernel">New Kernel detected. Your values will not get applied.</string>
    <string name="refresh">Refresh</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="newkernelavailable">New kernel is available.</string>

    <!-- Settings -->
    <string name="showdrawer">Show drawer</string>
    <string name="showdrawer_summary">Show navigation drawer at launch.</string>
    <string name="otaperiod">Set OTA Updates period</string>
    <string name="never">Nie</string>
    <string name="everyhour">Every %s hours</string>

    <!-- Tutorial -->
    <string name="welcome">Welcome to %s</string>
    <string name="app_summary">This app allows you to control your phone. Which features are available, depends on your kernel.</string>
    <string name="app_summary_warning">As always we are not responsible for any kind of damage on your expensive toy in your hand!</string>
    <string name="quickguide">Quick Guide</string>
    <string name="quickguide_summary">%s should be compatible with all phone, but not all features are available.\n\nYou can put in a custom value to Seekbars.</string>

    <!-- Information -->
    <string name="information">Information</string>
    <string name="device">Device</string>
    <string name="codename">Codename</string>
    <string name="kernelversion">Kernel Version</string>
    <string name="timeinstate">Time In State</string>
    <string name="unusedcpustates">Unused CPU states</string>
    <string name="totalstatetime">Total State Time</string>
    <string name="deepsleep">Deep Sleep</string>
    <string name="resettimers">Reset Timers</string>
    <string name="restoretimers">Restore Timers</string>

    <!-- CPU -->
    <string name="cpu">Cpu</string>
    <string name="cpufreq">CPU Frequency</string>
    <string name="offline">Offline</string>
    <string name="cpuscaling">Frequency scaling</string>
    <string name="cpumaxfreq">CPU Max Freq</string>
    <string name="cpumaxfreq_summary">Set the maximum frequency the CPU scales up to.</string>
    <string name="cpuminfreq">CPU Min Freq</string>
    <string name="cpuminfreq_summary">Set the minimum frequency the CPU scales down to.</string>
    <string name="maxscreenoff">CPU Max Freq Screen Off</string>
    <string name="maxscreenoff_summary">Set the maximum frequency the CPU scales up to when the screen is off.</string>
    <string name="minscreenon">CPU Min Freq Screen On</string>
    <string name="minscreenon_summary">Set the minimum frequency the CPU scales up to when the screen is on.</string>
    <string name="multicoresaving">Multicore Power Saving</string>
    <string name="multicoresaving_summary">Try to group tasks into the least cores possible. The higher value, the more aggressive</string>
    <string name="templimit">Temperature Limit</string>
    <string name="templimit_summary">Limit SOC highest temperature</string>
    <string name="governor">Governor</string>
    <string name="governor_summary">The CPU governor determines how the CPU behaves in response to changes in workload. Changing the governor will impact how the CPU scales through the frequency steps available to you CPU.</string>
    <string name="smartreflex">Smartreflex</string>
    <string name="smartreflex_summary">Smartreflex is a power management technology developed by Texas Instruments. It dynamically undervolts to what it determines is the lowest stable voltage at each frequency.</string>
    <string name="core">Core</string>
    <string name="iva">IVA</string>
    <string name="mpu">MPU</string>
    <string name="cpuvoltages">CPU Voltages</string>
    <string name="cpuvoltages_summary">Decreasing voltage will lower power consumption of the CPU. Increasing it on overclocked frequencies improves stability. Too low voltage may cause instabilities and freezes.</string>
    <string name="corevoltages">Core Voltages</string>
    <string name="ivavoltages">IVA Voltages</string>
    <string name="regulatorvoltages">Regulator Voltages</string>
    <string name="voltage">Voltage</string>

    <!-- GPU & Display -->
    <string name="gpu">Gpu</string>
    <string name="display">Display</string>
    <string name="gpuscaling">GPU Scaling</string>
    <string name="gpumaxfreq">GPU Max Freq</string>
    <string name="gpumaxfreq_summary">Set the maximum freqency the GPU scales up to.</string>
    <string name="adaptivebrightness">Content Adaptive Brightness</string>
    <string name="adaptivebrightness_summary">Disable this to make white brighter at low brightness (this has impact of battery life).</string>
    <string name="trinitycontrast">Trinity\'s Contrast</string>
    <string name="contrast">Set Contrast</string>
    <string name="contrast_summary">Set the difference between dark and bright colors.</string>
    <string name="gammacontrol">Gamma Control</string>
    <string name="setgamma">Set Gamma Value</string>
    <string name="gammacontrol_summary">Set midtones (middle gray levels).</string>
    <string name="gammaoffset">Gamma Offset</string>
    <string name="gammaoffset_summary">Gamma Offset controls Shadows/Blacks of the display. It does this by changing the brightness/color levels while leaving midtones and highlight areas unaffected.</string>
    <string name="colormultipliers">Color Multipliers</string>
    <string name="colormultipliers_summary">Set multiplier for a specific color.</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <!-- I/O Algorithm -->
    <string name="ioscheduler">I/O Scheduler</string>
    <string name="ioscheduler_summary">Set the active I/O elevator algorithm. The scheduler decides how to handle I/O requests and how to handle them.</string>
    <string name="internalscheduler">Internal Storage Scheduler</string>
    <string name="externalscheduler">External Storage Scheduler</string>
    <string name="internalreadahead">Internal Storage Read-ahead</string>
    <string name="externalreadahead">External Storage Read-ahead</string>

    <!-- Miscellaneous -->
    <string name="miscellaneous">Miscellaneous</string>
    <string name="network">Network</string>
    <string name="wifihigh">Wifi High Performance</string>
    <string name="wifihigh_summary">Keep Wifi speed in sleep mode.</string>
    <string name="ioalgorithm">I/O Algorithm</string>
    <string name="tcpcongestion">TCP Congestion Algorithm</string>
    <string name="tcpcongestion_summary">The Transmission Control Protocol is one of the core protocols of the Internet protocol suite (IP), and is so common that the entire suite is often called TCP/IP.</string>
    <string name="battery">Battery</string>
    <string name="fastcharge">Force Fast Charge</string>
    <string name="fastcharge_summary">Enable this will increase the charing speed with USB, but disable usb mass storage.</string>
    <string name="batteryextender">Battery Life eXtender</string>
    <string name="batteryextender_summary">Set a limit for the capacity to which the battery will be charged by passing a value between 0 and 100.</string>
    <string name="audio">Audio</string>
    <string name="soundhigh">High Performance Sound</string>
    <string name="headphoneboost">Headphone Volume Boost</string>
    <string name="notification">Notification</string>
    <string name="backlightnotification">Backlightnotification</string>
    <string name="backlightnotification_summary">Enable this the backlights of your phone will light up when you get a notification.</string>
    <string name="othersettings">Other Settings</string>
    <string name="dynamicfsync">Dynamic Fsync</string>
    <string name="dynamicfsync_summary">When enabled and screen is on, fsync operation is asynchronous. When screen is off, this operation is committed synchronously.</string>
    <string name="fsynccontrol">Fsync</string>
    <string name="fsynccontrol_summary">Disable for better file system performance at the risk of data lost when phone crashes.</string>
    <string name="vibrationstrength">Vibration Strength</string>
    <string name="vibrationstrength_summary">Control the vibration strength of your phone.</string>
    <string name="zramswap">zRAM</string>
    <string name="zramswap_summary">This feature reserves 10% of your device RAM as compressed swap space.</string>

    <!-- Download -->
    <string name="download">Download</string>
    <string name="downloads">Downloads</string>
    <string name="nointernet">No Internet Connection</string>
    <string name="nosupport">No Support</string>
    <string name="doyouwantdownload">Do you want to download %s? After the File has been downloaded, open the Install Kernel section.</string>
    <string name="delete">Delete</string>
    <string name="filealreadyexist">You already downloaded this file. Do you want to re-load it?</string>
    <string name="downloading">Downloading %s</string>
    <string name="success">Success</string>

    <!-- Install Kernel -->
    <string name="installkernel">Install Kernel</string>
    <string name="confirminstall">Do you want to install %s? The installation will only work on TWRP recovery!</string>
    <string name="nofiles">No files found.</string>
    <string name="deletefile">Delete File</string>
    <string name="confirmdelete">Do you want to delete %s?</string>

    <!-- News -->
    <string name="news">News</string>

</resources>