<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 AmperificSuperKANG Project

  This file is part of ASKP Control.

  ASKP Control is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  ASKP Control is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with ASKP Control.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/action_settings" >
        <CheckBoxPreference
            android:key="key_show_drawer"
            android:summary="@string/showdrawer_summary"
            android:title="@string/showdrawer" />

        <Preference
            android:key="key_ota_period"
            android:title="@string/otaperiod" />
    </PreferenceCategory>

</PreferenceScreen>