<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 AmperificSuperKANG Project

  This file is part of ASKP Control.

  ASKP Control is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  ASKP Control is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with ASKP Control.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/infoHeader"
            android:text="@string/device" />

        <TextView
            android:id="@+id/devicetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/infoHeader"
            android:text="@string/codename" />

        <TextView
            android:id="@+id/codenametext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/infoHeader"
            android:text="@string/kernelversion" />

        <TextView
            android:id="@+id/kernelversiontext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/infoHeader"
            android:text="@string/timeinstate" />

        <LinearLayout
            android:id="@+id/ui_states_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/ui_header_additional_states"
            style="@style/infoHeader"
            android:text="@string/unusedcpustates"
            android:visibility="gone" />

        <TextView
            android:id="@+id/ui_additional_states"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/ui_header_total_state_time"
            style="@style/infoHeader"
            android:text="@string/totalstatetime" />

        <TextView
            android:id="@+id/ui_total_state_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="7dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>